# quadelect

./: .git-blame-ignore-revs  .gitignore  AUTHORS  CMakeLists.txt  CMakePresets.json  Makefile.am  README  README.md  all_astyle.sh  astyle.sh  configure.ac  init_hook.sh  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build_cmake.yml
bugs/curved_yee/: legend.txt
cmake/: FindGLPK.cmake
doc/disprovers/: copeland_mono.txt  minimal_beatpaths_fail.txt
doc/suggestions/: IEVS methods.txt  [EM] Condorcet question - why not bullet vote.eml
examples/: README
examples/ballots/: Burlington2009.txt  EjlakMethodX.txt  EjlakMethodX_after.txt  README.md
examples/config/general_rpn/: performance_test_with_order.cfg  short_example.cfg  short_example_with_order.cfg
examples/general_rpn/algorithms/: 3cddt_10.txt  4cddt_100.txt  4cddt_5k.txt
hooks/: README.md  pre-commit
src/: ballot_tools.cc  ballot_tools.h  ballots.cc  ballots.h  cache.cc  cache.h  choose_inc.cc  choose_inc.h  tools.cc  tools.h
src/.deps/: ballot_tools.Po  ballots.Po  cache.Tpo  qelect-ballot_tools.Po  qelect-ballots.Po  qelect-cache.Po  qelect-choose_inc.Po  qelect-tools.Po
src/bandit/: README  bandit.cc  bandit.h  binomial.cc  binomial.h  lilucb.cc  lilucb.h  lucb.cc  lucb.h
src/bandit/tests/: bernoulli.cc  bernoulli.h  reverse.h  tests.h  uniform.h
src/coalitions/: coalitions.cc  coalitions.h
src/common/: ballots.cc  cache.h
src/config/: general_rpn.cc  general_rpn.h
src/design/resistant/: README.md  monotone.cc
src/distances/: vivaldi_test.cc  vivaldi_test.h
src/distances/.deps/: qelect-vivaldi_test.Po
src/distances/aux/: calc_dna.cc
src/distances/auxiliary/: calc_dna.cc
src/distances/backup/: vivaldi_test.cc  vivaldi_test_2.cc
src/distances/outputs/: coords.txt  coords2.txt  coords_3c_25_br.txt  coords_3c_lesser.txt  coords_kslower.txt  coords_kv.txt  coords_kv_unnorm.txt  coords_many.txt  coords_massive.txt  coords_pruned.txt  coords_winnow.txt  esper.txt  kv_full_info.txt  kv_full_info_2.txt  massive_50.txt  o.txt  output.txt  output2.txt  output_3c.txt  output_3c_25_br.txt  output_3c_lesser.txt  output_kslower.txt  output_kv.txt  output_kv_unnorm.txt  output_many.txt  output_pruned.txt  output_winnow.txt  vai.txt  woutput_3c.txt  woutput_5c.txt
src/generator/: all.h  ballotgen.cc  ballotgen.h  dirichlet.cc  dirichlet.h  gaussian.cc  gaussian.h  iac.cc  iac.h  impartial.cc  impartial.h  impartial_gen.cc  impartial_gen.h  spatial.cc  spatial.h  uniform_score.h
src/generator/.deps/: qelect-ballotgen.Po  qelect-dirichlet.Po  qelect-gaussian.Po  qelect-impartial.Po  qelect-spatial.Po
src/generator/alt/: ballotgen.cc  gaussian.cc
src/generator/backup/: ballotgen.cc  spatial.cc
src/generator/not_ported/: barycentric.cc
src/generator/spatial/: all.h  bernoulli.cc  bernoulli.h  gaussian.cc  gaussian.h  quasi_gaussian.cc  quasi_gaussian.h  spatial.cc  spatial.h  uniform.cc  uniform.h
src/grad_median/: grad_median.cc  grad_median.h
src/grad_median/.deps/: qelect-grad_median.Po
src/hack/: msvc_random.h
src/images/color/: color.cc  color.h
src/interpreter/: README  all.h  interpreter.h  rank_order.cc  rank_order.h
src/interval/: README  interval.cc  interval.h
src/lib/: README.md
src/lib/combinations/: combinations.h  main.cpp
src/lib/spookyhash/: SpookyV2.cpp  SpookyV2.h  TestSpookyV2.cpp
src/linear_model/: README
src/linear_model/constraints/: cand_pairs.h  constraint_polytope.cc  constraint_polytope.h  constraint_tools.cc  constraint_tools.h  direct_relative_criterion.cc  direct_relative_criterion.h  general.h  numvoters.cc  numvoters.h  pairwise.cc  (+5 more)
src/main/: combined.cc  dimensionality.cc  find_distinguisher.cc  generate_rpn_nums.cc  ktau_dists.cc  ktau_dists_pca.cc  monotonator.cc  multiwinner.cc  multiwinner_spatial.cc  strat_test.cc  strat_test.h  swtest_cache.cc  test_bandit_correctness.cc  test_bandit_performance.cc  test_brute_properties.cc  test_cache.cc  test_condcache.cc  test_monotonicity_bandit.cc  test_strategy.cc  test_strategy_brute_bandit.cc  test_strategy_brute_detail.cc  test_strategy_fixed.cc  test_strategy_linbrute_bandit.cc  test_vse_bandit.cc  test_vse_brute.cc  ttetest_cache.cc  ttetest_discover.cc
src/modes/: README  all.h  barycentric.cc  barycentric.h  breg.cc  breg.h  interpret.cc  interpret.h  mode.h  yee.cc  yee.h
src/multiwinner/: auction.cc  auction.h  compat_qbuck.cc  compat_qbuck.h  dhwl.cc  dhwl.h  dhwl_mat.cc  dhwl_mat.h  get_methods.cc  get_methods.h  hard_card.cc  hard_card.h  meek_stv.cc  meek_stv.h  methods.cc  methods.h  prbucklin.cc  prbucklin.h  psc.cc  psc.h  qbuck.cc  qbuck.h  qpq.cc  qpq.h  qrange_stv.cc  qrange_stv.h  quotas.h  randballots.cc  randballots.h  range_stv.cc  range_stv.h  set_webster.h  shuntsstv.cc  shuntsstv.h  stv.cc  stv.h  types.h
src/output/: png_writer.cc  png_writer.h
src/pairwise/: abstract_matrix.cc  abstract_matrix.h  beatpath.cc  beatpath.h  cache_matrix.cc  cache_matrix.h  grad_matrix.cc  grad_matrix.h  matrix.cc  matrix.h  types.cc  types.h
src/random/: random.cc  random.h
src/reference/: README.md  compile.sh  yee_borda.cc
src/reference_tests/: disproof.h  two_tests.cc  two_tests.h
src/simulator/: README.md  all.h  bernoulli.cc  bernoulli.h  bounded.h  reverse.h  runtime.cc  runtime.h  simulator.cc  simulator.h
src/singlewinner/: acp.cc  acp.h  all.h  dsc.cc  dsc.h  elimination.cc  elimination.h  fpc.cc  fpc.h  get_methods.cc  get_methods.h  gradual_c_b.cc  gradual_c_b.h  hash.cc  hash.h  method.cc  method.h  no_elimination_irv.cc  no_elimination_irv.h  quick_runoff.cc  quick_runoff.h  reverse_multiwinner.cc  reverse_multiwinner.h  smith_approval.cc  smith_approval.h  young.cc  young.h
src/stats/: coordinate_gen.cc  coordinate_gen.h  mwstats.h  stats.h
src/tests/: cache.h  disproof.h  provider.cc  provider.h  runner.cc  runner.h  strategies.cc  strategies.h  test.cc  test.h  two_tests.cc  two_tests.h
src/tools/: ballot_tools.cc  ballot_tools.h  cp_tools.cc  cp_tools.h  factoradic.cc  factoradic.h  time_tools.cc  time_tools.h  tools.cc  tools.h
(+546 files in other folders)
