AC_INIT([Quadelect], [0.1], [km_elmet@lavabit.com], [quadelect], [http://urltest])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])
AC_CONFIG_HEADERS([config.h])

# Test for compilers
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX

# C compiler required for make with .c files
AM_PROG_CC_C_O

# We also need some low-level headers
AC_HEADER_STDC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
